--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
 @charset "UTF-8";
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: "Segoe UI", SegoeUI, "Microsoft JhengHei", "微軟正黑體", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.header {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -15,34 +22,34 @@ body {
   background-color: #fff;
 }
 
-.header .border-1 {
+.nav .border-1 {
   border: 1px dotted transparent;
 }
 
-.header .border-1:active {
+.nav .border-1:active {
   border: 1px dotted #000;
 }
 
-.header a {
+.nav a {
   font-size: 13px;
   text-decoration: none;
   color: #000;
 }
 
-.header a:hover {
+.nav a:hover {
   border-bottom: 3px solid #000;
 }
 
-.header .logo {
+.nav .logo {
   padding: 16px 6px 10px 10px;
   width: 137px;
 }
 
-.header .logo img {
+.nav .logo img {
   height: 23px;
 }
 
-.header .nav-list {
+.nav .nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,15 +58,15 @@ body {
           flex-grow: 1;
 }
 
-.header .nav-list .nav-list-item {
+.nav .nav-list .nav-list-item {
   padding: 16px 8px 10px;
 }
 
-.header .nav-item {
+.nav .nav-item {
   padding: 16px 8px 10px;
 }
 
-.header .user {
+.nav .user {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -69,11 +76,11 @@ body {
   padding: 16px 8px 10px;
 }
 
-.header .user span {
+.nav .user span {
   font-size: 13px;
 }
 
-.header .user img {
+.nav .user img {
   margin-left: 5px;
   width: 32px;
   height: 32px;
@@ -250,7 +257,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 14px;
+  gap: 16px;
+  margin-bottom: 48px;
 }
 
 .content .follow span {
@@ -259,7 +267,106 @@ body {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.content .footer {
+.content .follow img {
+  width: 28px;
+  height: 28px;
+}
+
+.footer {
+  padding: 36px 5% 18px;
   background-color: #f2f2f2;
+}
+
+.bottom-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 38px;
+}
+
+.bottom-nav-list {
+  margin-right: 24px;
+  min-width: 216px;
+}
+
+.bottom-nav-list li {
+  margin-bottom: 16px;
+  height: 16px;
+  line-height: 16px;
+}
+
+.bottom-nav-list :first-child {
+  height: 20px;
+  font-size: 15px;
+  color: #616161;
+  line-height: 20px;
+  font-weight: 600;
+}
+
+.bottom-nav-list :not(:first-child) a {
+  font-size: 12px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.9);
+  cursor: pointer;
+  line-height: 16px;
+  font-weight: 400;
+}
+
+.bottom-nav-list :not(:first-child) a:hover {
+  text-decoration: underline;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact a {
+  font-size: 12px;
+  line-height: 18px;
+  text-decoration: none;
+  color: #000;
+}
+
+.language {
+  cursor: pointer;
+}
+
+.language:hover a {
+  text-decoration: underline;
+}
+
+.language i {
+  margin-right: 8px;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about a {
+  display: inline-block;
+  padding: 0 13.5px;
+}
+
+.about a:hover {
+  text-decoration: underline;
+}
+
+.copyright {
+  font-size: 11px;
+  line-height: 16px;
+  color: #616161;
 }
 /*# sourceMappingURL=style.css.map */
