--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ body {
   padding: 16px 8px 10px;
 }
 
+.nav .nav-item a,
+.nav .nav-item i {
+  vertical-align: middle;
+}
+
 .nav .user {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -212,7 +217,7 @@ body {
 }
 
 .content .product-list .product-card .no-tag {
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .content .product-list .product-card .product-card-text h3 {
@@ -284,6 +289,15 @@ body {
   margin-bottom: 38px;
 }
 
+.bottom-nav h4 {
+  margin-bottom: 12px;
+  height: 20px;
+  font-size: 15px;
+  color: #616161;
+  line-height: 20px;
+  font-weight: 600;
+}
+
 .bottom-nav-list {
   margin-right: 24px;
   min-width: 216px;
@@ -295,15 +309,7 @@ body {
   line-height: 16px;
 }
 
-.bottom-nav-list :first-child {
-  height: 20px;
-  font-size: 15px;
-  color: #616161;
-  line-height: 20px;
-  font-weight: 600;
-}
-
-.bottom-nav-list :not(:first-child) a {
+.bottom-nav-list a {
   font-size: 12px;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.9);
@@ -312,7 +318,7 @@ body {
   font-weight: 400;
 }
 
-.bottom-nav-list :not(:first-child) a:hover {
+.bottom-nav-list a:hover {
   text-decoration: underline;
 }
 
