--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,33 @@
+@mixin xxl {
+  @media screen and (max-width: 1400px) {
+    @content;
+  }
+}
+
+@mixin xl {
+  @media screen and (max-width: 1082px) {
+    @content;
+  }
+}
+
+@mixin lg {
+  @media screen and (max-width: 860px) {
+    @content;
+  }
+}
+
+@mixin md {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin sm {
+  @media screen and (max-width: 540px) {
+    @content;
+  }
+}
+
 *,
 *::before,
 *::after {
@@ -15,6 +45,10 @@ body {
   height: 54px;
   background-color: #fff;
 
+  @include xl {
+    padding: 0 2%;
+  }
+
   .border-1 {
     border: 1px dotted transparent;
 
@@ -23,12 +57,12 @@ body {
     }
   }
 
-  a {
+  a:not(.logo) {
     font-size: 13px;
     text-decoration: none;
     color: #000;
 
-    &:hover {
+    &:hover span {
       border-bottom: 3px solid #000;
     }
   }
@@ -50,7 +84,7 @@ body {
   .nav-item {
     padding: 16px 8px;
 
-    a,
+    span,
     i {
       vertical-align: middle;
     }
@@ -59,12 +93,25 @@ body {
   .icon-list {
     display: flex;
     align-items: center;
+
+    li:not(:first-of-type) {
+      @include xxl {
+        span {
+          display: none;
+        }
+
+        i {
+          font-size: 18px;
+        }
+      }
+    }
   }
 
   .user {
     display: flex;
     align-items: center;
-    padding: 16px 8px 10px;
+    padding: 16px 8px;
+    cursor: pointer;
 
     span {
       font-size: 13px;
@@ -82,178 +129,313 @@ body {
 
 .content {
   padding: 0 5%;
+}
 
-  .banner {
-    position: relative;
-    margin-bottom: 48px;
-    height: 511px;
+.banner {
+  position: relative;
+  padding: 0 5%;
+  margin-bottom: 48px;
+  height: 511px;
+
+  @include xl {
+    padding: 0;
+  }
+
+  @include md {
+    height: auto;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    vertical-align: middle;
+  }
+
+  &-item {
+    transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    left: 11%;
+    max-width: 520px;
+
+    @include xl {
+      left: 6%;
+      max-width: 320px;
+    }
+
+    @include md {
+      position: static;
+      padding: 100px 57px;
+      max-width: 100%;
+      text-align: center;
+      background-color: #e6e6e6;
+      transform: translateY(0);
+    }
+
+    > span {
+      display: inline-block;
+      padding: 4px 14px 6px;
+      margin-bottom: 3px;
+      font-size: 15px;
+      background-color: #ffb900;
+      font-weight: 700;
+    }
+
+    h2 {
+      position: relative;
+      margin-bottom: 12px;
+      font-size: 34px;
+      line-height: 40px;
+      font-weight: 600;
+
+      @include md {
+        font-size: 20px;
+        line-height: 24px;
+      }
+    }
+
+    p {
+      margin-bottom: 24px;
+      font-size: 15px;
+      line-height: 20px;
+    }
+  }
+
+  .btn-block {
+    @include xl {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &-btn {
+    padding: 10px 22px;
+    margin-right: 29px;
+    font-size: 15px;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    font-weight: 600;
+
+    span {
+      position: relative;
+    }
+
+    i {
+      position: relative;
+      right: 0;
+      transition: 0.3s;
+      vertical-align: middle;
+    }
+
+    &:hover {
+      span::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: currentcolor;
+      }
+
+      i {
+        right: -5px;
+      }
+    }
+
+    &-dark {
+      color: #fff;
+      background-color: #000;
+
+      span {
+        left: 0;
+        transition: 0.3s;
+      }
+
+      &:hover {
+        span {
+          left: -5px;
+        }
+      }
+    }
+  }
+}
+
+.select-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 48px;
+
+  @include md {
+    justify-content: flex-start;
+  }
+
+  ul {
+    display: flex;
+
+    @include md {
+      display: block;
+    }
+
+    a {
+      display: flex;
+      align-items: center;
+      padding: 14px 30px;
+      font-size: 15px;
+      text-align: center;
+      text-decoration: none;
+      white-space: pre-line;// 用 \n 換行
+      color: #000;
+      flex-direction: column;
+      line-height: 20px;
+      font-weight: 600;
+
+      @include md {
+        display: block;
+        padding: 14px 0;
+        text-align: left;
+        white-space: nowrap;
+      }
+
+      &:hover span::after {
+        position: absolute;
+        bottom: 2px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #000;
+        content: "";
+      }
+    }
+
+    span {
+      position: relative;
+
+      @include md {
+        vertical-align: middle;
+      }
+    }
+
+    img {
+      margin-bottom: 4px;
+      width: 40px;
+      height: 40px;
+
+      @include md {
+        margin-right: 4px;
+        margin-bottom: 0;
+        width: 20px;
+        height: 20px;
+        vertical-align: middle;
+      }
+    }
+  }
+}
+
+.product {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 48px;
+
+  &-card {
+    width: 23.5%;
+
+    @include xl {
+      width: 48.8%;
+    }
+
+    @include sm {
+      margin-bottom: 40px;
+      width: 100%;
+    }
+
+    &:hover {
+      img {
+        opacity: 0.9;
+      }
+    }
 
     img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      vertical-align: middle;
     }
 
-    .banner-item {
-      transform: translateY(-50%);
-      position: absolute;
-      top: 50%;
-      left: 6%;
-      max-width: 520px;
+    .tag {
+      display: inline-block;
+      padding: 3px 14px;
+      margin: 12px 0;
+      font-size: 13px;
+      background-color: #ffd800;
+      line-height: 20px;
+    }
 
-      span {
-        display: inline-block;
-        padding: 4px 14px 6px;
-        margin-bottom: 3px;
-        font-size: 15px;
-        background-color: #ffb900;
-        font-weight: 700;
-      }
+    .no-tag {
+      margin-top: 50px;
+    }
 
-      h2 {
-        position: relative;
-        margin-bottom: 12px;
-        font-size: 34px;
-        line-height: 40px;
+    &-text {
+      h3 {
+        padding: 1px 0 2px;
+        font-size: 20px;
+        opacity: 0.95;
+        line-height: 24px;
         font-weight: 600;
       }
 
-      p {
-        margin-bottom: 24px;
-        font-size: 15px;
-        line-height: 20px;
-      }
-
-      .banner-btn {
-        padding: 10px 22px;
-        margin-right: 29px;
-        font-size: 15px;
-        background-color: transparent;
-        border: 0;
-        cursor: pointer;
-        font-weight: 600;
-      }
-
-      .banner-btn-dark {
-        color: #fff;
-        background-color: #000;
-      }
-    }
-  }
-
-  .select-list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 48px;
-
-    ul {
-      display: flex;
-
-      li {
-        a {
-          display: flex;
-          align-items: center;
-          padding: 14px 30px;
-          font-size: 15px;
-          text-align: center;
-          text-decoration: none;
-          color: #000;
-          flex-direction: column;
-          line-height: 20px;
-          font-weight: 600;
-        }
-      }
-
-      img {
-        margin-bottom: 4px;
-        width: 40px;
-        height: 40px;
-      }
-    }
-  }
-
-  .product-list {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 48px;
-
-    .product-card {
-      width: 23.5%;
-
-      &:hover {
-        img {
-          opacity: 0.9;
-        }
-      }
-
-      .tag {
+      a {
         display: inline-block;
-        padding: 3px 14px;
-        margin: 12px 0;
-        font-size: 13px;
-        background-color: #ffd800;
-        line-height: 20px;
-      }
+        padding: 10px 3px 7px 0;
+        font-weight: 600;
+        text-decoration: none;
+        color: #005da6;
 
-      .no-tag {
-        margin-top: 50px;
-      }
-
-      .product-card-text {
-        h3 {
-          padding: 1px 0 2px;
-          font-size: 20px;
-          opacity: 0.95;
-          line-height: 24px;
-          font-weight: 600;
+        i {
+          position: relative;
+          right: 0;
+          transition: 0.3s;
         }
 
-        span {
-          display: inline-block;
-          padding: 10px 3px 7px 0;
-          font-weight: 600;
-
-          a {
-            text-decoration: none;
-            color: #005da6;
-
-            &:hover {
-              border-bottom: 2px solid #005da6;
-            }
+        &:hover {
+          span {
+            border-bottom: 2px solid #005da6;
           }
 
           i {
-            color: #005da6;
+            right: -5px;
           }
         }
       }
     }
   }
 
-  .product-title {
+  &-title {
     padding: 36px 0 4px;
     margin-bottom: 20px;
     font-size: 24px;
     line-height: 28px;
     font-weight: 600;
   }
+}
 
-  .follow {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    margin-bottom: 48px;
+.follow {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 48px;
 
-    span {
-      font-size: 15px;
-      line-height: 20px;
-      color: rgba(0, 0, 0, 0.6);
-    }
+  span {
+    font-size: 15px;
+    line-height: 20px;
+    color: rgba(0, 0, 0, 0.6);
+  }
 
-    img {
-      width: 28px;
-      height: 28px;
-    }
+  img {
+    width: 28px;
+    height: 28px;
   }
 }
 
@@ -264,7 +446,23 @@ body {
 
 .bottom-nav {
   display: flex;
-  margin-bottom: 38px;
+
+  @include xl {
+    flex-wrap: wrap;
+  }
+
+  &-block {
+    margin-bottom: 38px;
+    min-width: 16.66666%;
+
+    @include xl {
+      min-width: 33.3333%;
+    }
+
+    @include sm {
+      min-width: 100%;
+    }
+  }
 
   h4 {
     margin-bottom: 12px;
@@ -276,9 +474,6 @@ body {
   }
 
   &-list {
-    margin-right: 24px;
-    min-width: 216px;
-
     li {
       margin-bottom: 16px;
       height: 16px;
@@ -304,6 +499,10 @@ body {
   display: flex;
   justify-content: space-between;
 
+  @include lg {
+    flex-wrap: wrap;
+  }
+
   a {
     font-size: 12px;
     line-height: 18px;
@@ -315,6 +514,11 @@ body {
 .language {
   cursor: pointer;
 
+  @include md {
+    margin-bottom: 16px;
+    width: 100%;
+  }
+
   &:hover a {
     text-decoration: underline;
   }
@@ -323,6 +527,11 @@ body {
     margin-right: 8px;
     font-size: 18px;
     vertical-align: middle;
+    color: #666;
+  }
+
+  a {
+    color: #666;
   }
 }
 
@@ -330,9 +539,22 @@ body {
   display: flex;
   align-items: center;
 
+  @include sm {
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  li:not(.copyright) {
+    margin-right: 20px;
+
+    @include md {
+      margin-right: 15px;
+    }
+  }
+
   a {
     display: inline-block;
-    padding: 0 13.5px;
+    color: #666;
 
     &:hover {
       text-decoration: underline;
@@ -344,4 +566,9 @@ body {
   font-size: 11px;
   line-height: 16px;
   color: #616161;
+
+  @include sm {
+    margin-top: 8px;
+    width: 100%;
+  }
 }
