--- a/css/style.scss
+++ b/css/style.scss
@@ -10,8 +10,20 @@
   }
 }
 
+@mixin lgp {
+  @media screen and (max-width: 900px) {
+    @content;
+  }
+}
+
 @mixin lg {
   @media screen and (max-width: 860px) {
+    @content;
+  }
+}
+
+@mixin lgm {
+  @media screen and (max-width: 840px) {
     @content;
   }
 }
@@ -38,6 +50,10 @@ body {
   font-family: "Segoe UI", SegoeUI, "Microsoft JhengHei", "微軟正黑體", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+.menu-controller {
+  display: none;
+}
+
 .nav {
   display: flex;
   align-items: center;
@@ -46,10 +62,45 @@ body {
   background-color: #fff;
 
   @include xl {
-    padding: 0 2%;
+    padding: 0 25px;
   }
 
-  .border-1 {
+  @include lgm {
+    justify-content: space-between;
+    padding: 0 5px;
+  }
+
+  .hamburger-menu {
+    display: none;
+    padding: 0 10px;
+    font-size: 28px;
+    border: 2px solid transparent;
+    cursor: pointer;
+
+    @include lgm {
+      display: block;
+      order: -1;
+    }
+
+    &:active {
+      border-color: #000;
+    }
+  }
+
+  .lgp-item {
+    @include lgp {
+      display: none;
+    }
+  }
+
+  .lg-item {
+    @include lg {
+      display: none;
+    }
+  }
+
+  .logo,
+  li {
     border: 1px dotted transparent;
 
     &:active {
@@ -79,6 +130,10 @@ body {
   .nav-list {
     display: flex;
     flex-grow: 1;
+
+    @include lgm {
+      display: none;
+    }
   }
 
   .nav-item {
@@ -87,6 +142,12 @@ body {
     span,
     i {
       vertical-align: middle;
+    }
+  }
+
+  .sub-menu {
+    @include lgm {
+      display: none;
     }
   }
 
@@ -104,6 +165,14 @@ body {
           font-size: 18px;
         }
       }
+    }
+  }
+
+  .more {
+    display: none;
+
+    @include lgp {
+      display: block;
     }
   }
 
@@ -207,6 +276,10 @@ body {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+    }
+
+    @include md {
+      display: block;
     }
   }
 
@@ -345,11 +418,11 @@ body {
     width: 23.5%;
 
     @include xl {
+      margin-bottom: 40px;
       width: 48.8%;
     }
 
     @include sm {
-      margin-bottom: 40px;
       width: 100%;
     }
 
