--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,12 @@ body {
   display: none;
 }
 
+.menu-controller:checked ~ .hamburger-menu-list {
+  display: block;
+}
+
 .nav {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -34,9 +39,6 @@ body {
 
 @media screen and (max-width: 840px) {
   .nav {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     padding: 0 5px;
   }
 }
@@ -56,6 +58,37 @@ body {
         -ms-flex-order: -1;
             order: -1;
   }
+}
+
+.nav .hamburger-menu-list {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  display: none;
+  width: 100%;
+  background-color: #e6e6e6;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+
+.nav .hamburger-menu-list a {
+  position: relative;
+  display: block;
+  padding: 14px 15px 15px;
+  font-size: 15px;
+  text-decoration: none;
+  color: #262626;
+}
+
+.nav .hamburger-menu-list a::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.5px;
+  background-color: #ddd;
+  content: "";
 }
 
 .nav .hamburger-menu:active {
@@ -84,19 +117,31 @@ body {
   border: 1px dotted #000;
 }
 
-.nav a:not(.logo) {
+.nav .nav-list a,
+.nav .icon-list a {
   font-size: 13px;
   text-decoration: none;
   color: #000;
 }
 
-.nav a:not(.logo):hover span {
+.nav .nav-list a:hover span,
+.nav .icon-list a:hover span {
   border-bottom: 3px solid #000;
 }
 
 .nav .logo {
   padding: 16px 6px 10px 10px;
   width: 137px;
+}
+
+@media screen and (max-width: 840px) {
+  .nav .logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
 }
 
 .nav .logo img {
@@ -142,12 +187,29 @@ body {
           align-items: center;
 }
 
+@media screen and (max-width: 840px) {
+  .nav .icon-list {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
 @media screen and (max-width: 1400px) {
   .nav .icon-list li:not(:first-of-type) span {
     display: none;
   }
   .nav .icon-list li:not(:first-of-type) i {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .nav .search-btn {
+    margin-right: auto;
   }
 }
 
