--- a/css/style.scss
+++ b/css/style.scss
@@ -52,9 +52,14 @@ body {
 
 .menu-controller {
   display: none;
+
+  &:checked ~ .hamburger-menu-list {
+    display: block;
+  }
 }
 
 .nav {
+  position: relative;
   display: flex;
   align-items: center;
   padding: 0 5%;
@@ -66,7 +71,6 @@ body {
   }
 
   @include lgm {
-    justify-content: space-between;
     padding: 0 5px;
   }
 
@@ -80,6 +84,36 @@ body {
     @include lgm {
       display: block;
       order: -1;
+    }
+
+    &-list {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 2;
+      display: none;
+      width: 100%;
+      background-color: #e6e6e6;
+      transform: translateY(100%);
+
+      a {
+        position: relative;
+        display: block;
+        padding: 14px 15px 15px;
+        font-size: 15px;
+        text-decoration: none;
+        color: #262626;
+
+        &::after {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 0.5px;
+          background-color: #ddd;
+          content: "";
+        }
+      }
     }
 
     &:active {
@@ -108,7 +142,8 @@ body {
     }
   }
 
-  a:not(.logo) {
+  .nav-list a,
+  .icon-list a {
     font-size: 13px;
     text-decoration: none;
     color: #000;
@@ -121,6 +156,13 @@ body {
   .logo {
     padding: 16px 6px 10px 10px;
     width: 137px;
+
+    @include lgm {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
 
     img {
       height: 23px;
@@ -155,6 +197,11 @@ body {
     display: flex;
     align-items: center;
 
+    @include lgm {
+      flex-grow: 1;
+      justify-content: flex-end;
+    }
+
     li:not(:first-of-type) {
       @include xxl {
         span {
@@ -165,6 +212,12 @@ body {
           font-size: 18px;
         }
       }
+    }
+  }
+
+  .search-btn {
+    @include lgm {
+      margin-right: auto;
     }
   }
 
