--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,18 @@ body {
 
 @media screen and (max-width: 768px) {
   .banner .btn-block {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -364,6 +375,12 @@ body {
   border: 0;
   cursor: pointer;
   font-weight: 600;
+}
+
+@media screen and (max-width: 540px) {
+  .banner-btn {
+    margin-right: 10px;
+  }
 }
 
 .banner-btn span {
